kube/hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /hello
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hello-unsafe
            pathType: Exact
            backend:
              service:
                name: hello
                port:
                  number: 8080
